--- a/day01/index.html
+++ b/day01/index.html
@@ -6,15 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <link href="../css/style.css" rel="stylesheet"> </head>
+</head>
 
 <body>
-    <div id="myApp"> {{ message10 }} </div>
+    <div id="myApp"> {{ message }} </div>
     <script>
         var myApp = new Vue({
             el: '#myApp'
             , data: {
-                message10: 'Hello Vue.js World!'
+                message: 'Hello World! from szftime'
             }
         });
     </script>
